test/tests/compiler/14_pointers/invalid_types/plx1_address_of_cast.plx
pub fn main(none) i32 {
    x: i32 = 10
    ptr: *i32 = @cast<i32>(x)
    return 0
}
